# reference-mcp

./: Dockerfile  README.md  pyproject.toml  smithery.yaml
src/cite_mcp/: server.py
