[project]
name = "cite-mcp"
version = "0.1.0"
description = "Get citation data from CiteAs and Google Scholar"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "mcp>=1.4.1",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
cite-mcp = "cite_mcp:main"
