[project]
name = "cite-mcp"
version = "0.1.1"
description = "Get citation data from CiteAs and Google Scholar"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [ "mcp==1.4.1", "scholarly==1.7.11" ]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
cite-mcp = "cite_mcp.server:main"
